browser/themes/shared/browser-shared.css
/* ... */
/* Find bar */

.browserContainer > findbar {
  background-color: var(--toolbar-bgcolor);
  color: var(--toolbar-color);
  border-top-color: var(--chrome-content-separator-color, ThreeDShadow);
}

.browserContainer > findbar:-moz-lwtheme {
  background-color: var(--lwt-accent-color);
  background-image: linear-gradient(var(--toolbar-bgcolor), var(--toolbar-bgcolor)), var(--lwt-additional-images);
  background-repeat: no-repeat, var(--lwt-background-tiling);
  background-position: right bottom, var(--lwt-background-alignment);
  background-position-y: bottom !important;
}

:root:not([lwtheme-image]) .browserContainer > findbar:-moz-lwtheme:-moz-window-inactive {
  background-color: var(--lwt-accent-color-inactive, var(--lwt-accent-color));
}

:root[lwtheme-image] .browserContainer > findbar {
  background-image: linear-gradient(var(--toolbar-bgcolor), var(--toolbar-bgcolor)), var(--lwt-header-image), var(--lwt-additional-images);
  background-repeat: no-repeat, no-repeat, var(--lwt-background-tiling);
  background-position: center, right bottom, var(--lwt-background-alignment);
}

/* Private browsing indicator */

#private-browsing-indicator-with-label {
  align-items: center;
  margin-inline: 7px;
}

.private-browsing-indicator-icon {
  list-style-image: url("chrome://global/skin/icons/indicator-private-browsing.svg");
  width: 16px;
  height: 16px;
}

:root:not([privatebrowsingmode=temporary]) #private-browsing-indicator-with-label {
  display: none;
}

/* End private browsing indicator */

/* Override theme colors since the picker uses extra colors that
   themes cannot set */
#DateTimePickerPanel {
  color-scheme: env(-moz-content-preferred-color-scheme);
  --arrowpanel-background: Field;
  --arrowpanel-color: FieldText;
}

#widget-overflow .webextension-popup-browser {
  background: #fff;

  /* height set via JS can be lower than the stack min-height,
     ensure the browser takes up at least that min-height */
  min-height: 100%;
}

#addon-progress-notification-progressmeter {
  margin: 2px 4px;
}

/* Contextual Feature Recommendation popup-notification */

#cfr-notification-header {
  width: 100%;
  display: block;
  text-align: center;
  box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.2);
}

#cfr-notification-header-stack {
  width: 100%;
}

#cfr-notification-header-label {
  margin: 9px;
  font-weight: 600;
}

#cfr-notification-header-link {
  margin: 7px;
  color: inherit;
  cursor: default;
  justify-self: end;
}

#cfr-notification-header-image {
  width: 19px;
  height: 19px;
  padding: 2px;
  -moz-context-properties: fill, fill-opacity;
  fill: currentColor;
  fill-opacity: 0.6;
  list-style-image: url(chrome://global/skin/icons/help.svg);
}

#cfr-notification-header-image:hover {
  background-color: hsla(0,0%,70%,.2);
  border-radius: 2px;
}

#contextual-feature-recommendation-notification {
  width: 400px;
}

#contextual-feature-recommendation-notification[data-notification-bucket="CFR_MILESTONE_MESSAGE"] {
  background: radial-gradient(circle farthest-side at top right, var(--short-notification-gradient), var(--short-notification-background));
  width: unset;
  max-width: 700px;
  overflow-wrap: break-word;
}

#contextual-feature-recommendation-notification[data-notification-bucket="CFR_MILESTONE_MESSAGE"]:-moz-locale-dir(rtl) {
  background: radial-gradient(circle farthest-side at top left, var(--short-notification-gradient), var(--short-notification-background));
}

#contextual-feature-recommendation-notification[data-notification-bucket="CFR_MILESTONE_MESSAGE"] .popup-notification-body-container,
#contextual-feature-recommendation-notification[data-notification-bucket="CFR_MILESTONE_MESSAGE"] .popup-notification-footer-container,
#contextual-feature-recommendation-notification[data-notification-bucket="CFR_MILESTONE_MESSAGE"] #cfr-notification-header-link {
  display: none;
}

#contextual-feature-recommendation-notification[data-notification-bucket="CFR_MILESTONE_MESSAGE"] #cfr-notification-header {
  box-shadow: none;
}

#contextual-feature-recommendation-notification[data-notification-bucket="CFR_MILESTONE_MESSAGE"] description {
  font-weight: 400;
  margin: unset;
  margin-inline: 12px;
  transform: translateY(50%);
}

#contextual-feature-recommendation-notification[data-notification-bucket="CFR_MILESTONE_MESSAGE"] .panel-footer,
#contextual-feature-recommendation-notification[data-notification-bucket="CFR_MILESTONE_MESSAGE"] .popup-notification-header-container {
  display: inline-flex;
}

#contextual-feature-recommendation-notification[data-notification-bucket="CFR_MILESTONE_MESSAGE"] .panel-footer {
  float: inline-end;
  background-color: transparent;
  flex-direction: row-reverse;
  /* Override proton-doorhanger default styles that increase the size of the button */
  margin: 0;
}

#contextual-feature-recommendation-notification[data-notification-bucket="CFR_MILESTONE_MESSAGE"] .popup-notification-primary-button {
  background-color: rgba(216, 216, 216, 0.2);
  color: white;
  border: none;
  border-radius: 2px;
  margin: 4px;
  padding: 3px 12px;
  flex: 1;
  min-height: 22px;
}

#contextual-feature-recommendation-notification[data-notification-bucket="CFR_MILESTONE_MESSAGE"] .popup-notification-primary-button:after {
  content: url(chrome://global/skin/icons/arrow-left-12.svg);
  -moz-context-properties: fill;
  fill: currentColor;
  transform: translateY(2px);
  float: inline-end;
}

#contextual-feature-recommendation-notification[data-notification-bucket="CFR_MILESTONE_MESSAGE"]:-moz-locale-dir(ltr) .popup-notification-primary-button:after {
  content: url(chrome://global/skin/icons/arrow-right-12.svg);
}

#contextual-feature-recommendation-notification[data-notification-bucket="CFR_MILESTONE_MESSAGE"] .popup-notification-primary-button:hover {
  background-color: rgba(216, 216, 216, 0.4);
}
/* ... */

